Fix horizontal scroll bar bug

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -206,7 +206,7 @@ h2, .img-wrapper {
 }
 
 .orbit-bullets {
-    left: 50%;
+    margin-left: 50%;
 }
 
 .orbit-caption {
